--- a/public/register.html
+++ b/public/register.html
@@ -8,6 +8,8 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
+<link rel="stylesheet" href="css/styles.css">
+
 <body>
     <div class="container mt-5">
         <div class="row justify-content-center">
